--- a/app/src/main/res/layout/activity_new_page.xml
+++ b/app/src/main/res/layout/activity_new_page.xml
@@ -10,6 +10,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="RESULT"
+        android:gravity="center"
+        android:textSize="80sp"
+        android:textColor="@color/design_default_color_primary_variant"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="String:"
         android:textSize="20sp"/>
     <TextView
